--- a/public/css/contrast_checker.css
+++ b/public/css/contrast_checker.css
@@ -227,7 +227,7 @@ input[type=color]::-webkit-color-swatch {
   flex-direction: column;
   width: 100%;
   max-width: 30rem;
-  /* margin: 0.5rem 0 0rem; */
+  margin: 0.5rem 0 0rem;
   margin: 0;
   background-color: #f0f0f0;
   border: 1px solid var(--border-color-on-light);
