--- a/templates/default/_single_flash_message.html.twig
+++ b/templates/default/_single_flash_message.html.twig
@@ -6,6 +6,6 @@ parameters:
     - message: Message content,
 #}
 {# Bootstrap alert, see http://getbootstrap.com/components/#alerts #}
-<div class="alert alert-{{ type }}" role="alert">
+<div class="alert alert-{{ type }} mt-5" role="alert">
     {{ message }}
 </div>
