--- a/templates/editor/contrast_checker.html.twig
+++ b/templates/editor/contrast_checker.html.twig
@@ -1,3 +1,4 @@
+<main class="container">
   <svg hidden style="display: none;" xmlns="http://www.w3.org/2000/svg">
     <defs>
       <symbol id="pass" viewBox="0 0 24 24">
@@ -16,26 +17,42 @@
   </svg>
   
   <header class="container__header header">
-    <p class="header__text">Kontrast</p>
+    <h1 class="header__text">Kontrast</h1>
+    {# <button type="button" class="header__button" js-swap aria-label="Swap foreground and background colors">
+      <svg aria-hidden="true"><use xlink:href="#swap"></use></svg>
+    </button> #}
   </header>
 
   <section class="container__body">
     <div class="input input--container">
       <input type="text" id="foreground" placeholder="&nbsp;" name="foreground" value="{{ project.rgbToHex(project.lightShades) }}" spellcheck="false" class="input__input" js-foreground>
       <label for="foreground" class="input__label">Tekst:</label>
-      <p class="input__error" js-foreground-err>Wprowadzony kolor jest nieprawidłowy</p>
+      <p class="input__error" js-foreground-err>Nieprawidłowy kolor</p>
       <input js-foreground-color-input class="input__color input__color--foreground" type="color" aria-hidden="true">
     </div>
     <div class="input input--container">
       <input type="text" id="background" placeholder="&nbsp;" name="background" value="{{ project.rgbToHex(project.darkShades) }}" spellcheck="false" class="input__input" js-background>
       <label for="background" class="input__label">Tło:</label>
-      <p class="input__error" js-background-err>Wprowadzony kolor jest nieprawidłowy</p>
+      <p class="input__error" js-background-err>Nieprawidłowy kolor</p>
       <input js-background-color-input class="input__color input__color--background" type="color" aria-hidden="true">
     </div>
   </section>
   
+  {# <section class="container__warning warning">
+    <p class="warning__container">
+      <span class="warning__text-icon"><svg role="img" aria-label="caution"><use xlink:href="#caution"></use></svg></span>
+      <span class="warning__text-text">Opacity values will not work as desired.</span>
+    </p>
+  </section> #}
+  
   <section class="container__body wcag wcag--container">
-    <p class="wcag__ratio"><a href="https://www.w3.org/TR/WCAG21/#contrast-minimum" target="_blank" title="Web Content Accessibility Guidelines"><abbr title="Web Content Accessibility Guidelines">WCAG</abbr></a> Współczynnik kontrastu: <output id="output" js-output>4.9</output></p>
+    <p class="wcag__ratio">
+      {# <a href="https://www.w3.org/TR/WCAG21/#contrast-minimum" target="_blank" title="Web Content Accessibility Guidelines">
+        <abbr title="Web Content Accessibility Guidelines">WCAG</abbr>
+      </a>  #}
+      Poziom kontrastu: 
+        <output id="output" js-output>4.9</output>
+    </p>
     <p class="wcag__level wcag__level--aa-large">
       <span class="wcag__level-icon wcag__level-icon--pass" js-aa-large="pass"><svg role="img" aria-label="pass"><use xlink:href="#pass"></use></svg></span>
       <span class="wcag__level-icon wcag__level-icon--fail" js-aa-large="fail"><svg role="img" aria-label="fail"><use xlink:href="#fail"></use></svg></span>
@@ -57,3 +74,8 @@
       <span class="wcag__level-text">AAA mały font (7:1)</span>
     </p>
   </section>
+
+  {# <footer class="container__footer result result--container">
+    <p class="result__text" contenteditable="true">Click to edit Me!</p>
+  </footer> #}
+</main>
