--- a/templates/editor/product.html.twig
+++ b/templates/editor/product.html.twig
@@ -3,48 +3,15 @@
 	<link rel="stylesheet" href="{{ asset('css/editor.css') }}"></link>
 	<link rel="stylesheet" href="{{ asset('css/contrast_checker.css') }}"></link>
     <link rel="stylesheet" href="{{ asset('css/product.css') }}"></link>
+    <link rel="stylesheet" href="{{ asset('css/form.css') }}"></link>
+
 {% endblock %}
 
 {% block body %}
 	<div class="wrapper">
 		<div class="settings">
-			<ul class="nav justify-content-center">
-				<li class="nav-item justify-content-center">
-					<a class="nav-link" href="{{ url('homepage') }}">
-			            {{ 'title_app'|trans }}
-                    </a>
-                    <a class="nav-link" href="{{ url('project_colors_generate', {id: project.id}) }}">
-			            {{ 'label_generate_colors'|trans }}
-                    </a>
-				</li>
-			</ul>  
-
-           <form action="{{ url('project_colors_edit', {'id': project.id}) }}" method="GET" class="colors__settings">
-                <section class="container__body">
-                    <div class="input input--container">
-                        <p class="input__input__label">{{ project.rgbToHex(project.lightShades) }}</p>
-                        <input class="input__color input__color--foreground input__input input__input__color" type="color" value="{{ project.rgbToHex(project.lightShades) }}" name="lightShades"></input>
-                    </div>
-                    <div class="input input--container">
-                        <p class="input__input__label">{{ project.rgbToHex(project.lightAccent) }}</p>
-                        <input class="input__color input__color--foreground input__input input__input__color" type="color" value="{{ project.rgbToHex(project.lightAccent) }}" name="lightAccent"></input>
-                    </div>
-                    <div class="input input--container">
-                        <p class="input__input__label">{{ project.rgbToHex(project.baseColor) }}</p>
-                        <input class="input__color input__color--foreground input__input input__input__color" type="color" value="{{ project.rgbToHex(project.baseColor) }}" name="baseColor"></input>
-                    </div>
-                    <div class="input input--container">
-                        <p class="input__input__label">{{ project.rgbToHex(project.darkAccent) }}</p>
-                        <input class="input__color input__color--foreground input__input input__input__color" type="color" value="{{ project.rgbToHex(project.darkAccent) }}" name="darkAccent"></input>
-                    </div >
-                    <div class="input input--container">
-                        <p class="input__input__label">{{ project.rgbToHex(project.darkShades) }}</p>
-                        <input class="input__color input__color--foreground input__input input__input__color" type="color" value="{{ project.rgbToHex(project.darkShades) }}" name="darkShades"></input>
-                    </div>
-                    <input type="submit" value="Aktualizuj">
-                </section>
-                
-            </form>   
+			
+            {% include 'editor/form_template.html.twig' %}
 
             {% include 'editor/contrast_checker.html.twig' %}
 
