--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 
 <div class="d-flex justify-content-center align-items-center mt-5">
-		<div class="card" style="width: 18rem;">
+		<div class="card" style="width: 40rem; height: 20rem;">
 			<div class="card-body">
 				<h2 class="card-title">{{ 'title_user'|trans({'%id%': app.user.id|default('')}) }}</h2>
 
