--- a/templates/editor/company.html.twig
+++ b/templates/editor/company.html.twig
@@ -1,20 +1,36 @@
 {% block stylesheets %}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="{{ asset('css/editor.css') }}"></link>
+	<link rel="stylesheet" href="{{ asset('css/contrast_checker.css') }}"></link>
+    <link rel="stylesheet" href="{{ asset('css/company.css') }}"></link>
+    <link rel="stylesheet" href="{{ asset('css/form.css') }}"></link>
+
 {% endblock %}
 
 {% block body %}
 	<div class="wrapper">
 		<div class="settings">
-			<ul class="">
-				<li class="">
-					<a class="" href="{{ url('homepage') }}">Generator</a>
-				</li>
-			</ul>
-		</div>
-		<div class="main-content">
-					{{ project.category.title }}
+			
+            {% include 'editor/form_template.html.twig' %}
 
-					{{project.tags}}
+            {% include 'editor/contrast_checker.html.twig' %}
+
+        </div>
+        
+		<div class="main-content">
+
+            {% include 'editor/company_template.html.twig' %}
+
 		</div>
 	</div>
+
+    {% block javascripts %}
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.1/tinycolor.js"></script>
+    <script src="{{ asset('js/contrast_checker.js') }}"></script>
+    {% endblock %}
+
+
 {% endblock %}
