--- a/templates/editor/product_template.html.twig
+++ b/templates/editor/product_template.html.twig
@@ -1,13 +1,13 @@
 <div class="graphic">
-	<div style="background-color: {{ project.lightShades }}" class="left">
+	<div style="background-color: {{ project.darkShades }}" class="left">
 		<div class="left__top">
 			<div class="logo">
-				<p style="color: {{ project.darkShades }}">Lorem Ipsum</p>
+				<p style="color: {{ project.lightShades }}">Lorem Ipsum</p>
 			</div>
 		</div>
 		<div class="left__bottom">
 			<div class="text--main">
-				<p style="color: {{ project.darkShades }}">Suspendisse nec nulla ex.</p>
+				<p style="color: {{ project.lightShades }}">Suspendisse nec nulla ex.</p>
 			</div>
 		</div>
 	</div>
