--- a/templates/editor/product_template.html.twig
+++ b/templates/editor/product_template.html.twig
@@ -1,17 +1,47 @@
-<div class="graphic">
-	<div style="background-color: {{ project.darkShades }}" class="left">
+<div class="content" style="background-color: {{ project.darkShades }}">
+	<div class="left">
 		<div class="left__top">
-			<div class="logo">
-				<p style="color: {{ project.lightShades }}">Lorem Ipsum</p>
+			<div class="logo" style="color: {{ project.lightShades }}">
+				<p>maleada</p>
+				<svg width="100" height="100" viewbox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg" style="color: {{ project.darkShades }}">
+					<circle cx="50" cy="50" r="49.5" stroke="{{ project.baseColor }}"/>
+					<mask id="path-2-inside-1_130_2" fill="white">
+						<path d="M86 50C86 56.2217 84.3876 62.3372 81.3199 67.75C78.2523 73.1628 73.8342 77.6883 68.4965 80.8849C63.1589 84.0816 57.0838 85.8403 50.8639 85.9896C44.6441 86.1389 38.4916 84.6737 33.0067 81.7369C27.5218 78.8 22.8917 74.4918 19.5679 69.2324C16.244 63.973 14.34 57.9419 14.0415 51.7274C13.7429 45.5129 15.0601 39.3271 17.8645 33.7733C20.6688 28.2195 24.8647 23.4873 30.0428 20.0382L50 50H86Z"/>
+					</mask>
+					<path d="M86 50C86 56.2217 84.3876 62.3372 81.3199 67.75C78.2523 73.1628 73.8342 77.6883 68.4965 80.8849C63.1589 84.0816 57.0838 85.8403 50.8639 85.9896C44.6441 86.1389 38.4916 84.6737 33.0067 81.7369C27.5218 78.8 22.8917 74.4918 19.5679 69.2324C16.244 63.973 14.34 57.9419 14.0415 51.7274C13.7429 45.5129 15.0601 39.3271 17.8645 33.7733C20.6688 28.2195 24.8647 23.4873 30.0428 20.0382L50 50H86Z" stroke="{{ project.darkAccent }}" stroke-width="2" mask="url(#path-2-inside-1_130_2)"/>
+					<mask id="path-3-inside-2_130_2" fill="white">
+						<path d="M86 50C86 69.8823 69.8823 86 50 86C30.1177 86 14 69.8823 14 50C14 30.1177 30.1177 14 50 14C69.8823 14 86 30.1177 86 50ZM28.2344 50C28.2344 62.0208 37.9792 71.7656 50 71.7656C62.0208 71.7656 71.7656 62.0208 71.7656 50C71.7656 37.9792 62.0208 28.2344 50 28.2344C37.9792 28.2344 28.2344 37.9792 28.2344 50Z"/>
+					</mask>
+					<path d="M86 50C86 69.8823 69.8823 86 50 86C30.1177 86 14 69.8823 14 50C14 30.1177 30.1177 14 50 14C69.8823 14 86 30.1177 86 50ZM28.2344 50C28.2344 62.0208 37.9792 71.7656 50 71.7656C62.0208 71.7656 71.7656 62.0208 71.7656 50C71.7656 37.9792 62.0208 28.2344 50 28.2344C37.9792 28.2344 28.2344 37.9792 28.2344 50Z" stroke="{{ project.baseColor }}" stroke-width="2" mask="url(#path-3-inside-2_130_2)"/>
+				</svg>
 			</div>
 		</div>
 		<div class="left__bottom">
-			<div class="text--main">
-				<p style="color: {{ project.lightShades }}">Suspendisse nec nulla ex.</p>
+			<div class="graphic-element" style="color: {{ project.darkShades }}">
+				<svg width="1298" height="643" viewbox="0 0 1298 643" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<circle cx="321.5" cy="321.5" r="321" stroke="{{ project.baseColor }}"/>
+					<circle cx="317.579" cy="328.034" r="225.596" stroke="{{ project.lightAccent }}"/>
+					<circle cx="314.965" cy="321.935" r="157.636" stroke="{{ project.baseColor }}"/>
+					<circle cx="314.966" cy="321.936" r="277.001" stroke="{{ project.darkAccent }}"/>
+					<circle cx="314.53" cy="321.5" r="97.0827" fill="{{ project.baseColor }}" stroke="{{ project.baseColor }}"/>
+					<rect x="128.949" y="45.062" width="33.9797" height="33.9797" transform="rotate(-35.6311 128.949 45.062)" fill="{{ project.baseColor }}"/>
+					<rect x="453.686" y="44.8945" width="33.9797" height="33.9797" transform="rotate(-56.8635 453.686 44.8945)" fill="{{ project.baseColor }}"/>
+					<rect x="624.494" y="268.45" width="33.9797" height="33.9797" transform="rotate(-8.80633 624.494 268.45)" fill="{{ project.baseColor }}"/>
+					<rect x="43.6956" y="514.656" width="33.9797" height="33.9797" transform="rotate(-38.9976 43.6956 514.656)" fill="{{ project.baseColor }}"/>
+					<rect x="277.823" y="493.338" width="33.9797" height="33.9797" transform="rotate(-79.5739 277.823 493.338)" fill="{{ project.baseColor }}"/>
+					<circle cx="77.1079" cy="178.175" r="14.376" fill="{{ project.darkAccent }}"/>
+					<circle cx="537.14" cy="489.22" r="11.7622" fill="{{ project.darkAccent }}"/>
+					<path d="M403.827 105.905L428.667 120.226L403.844 134.577L403.827 105.905Z" fill="{{ project.lightAccent }}"/>
+					<path d="M82.2908 313.232L107.131 327.553L82.3083 341.904L82.2908 313.232Z" fill="{{ project.lightAccent }}"/>
+					<rect x="582.494" y="473.248" width="715" height="26" fill="{{ project.baseColor }}"/>
+					<rect x="582.494" y="610.248" width="715" height="26" fill="{{ project.baseColor }}"/>
+					<rect x="406.494" y="565.248" width="550" height="25" fill="{{ project.baseColor }}"/>
+					<rect x="473.494" y="519.248" width="415" height="25" fill="{{ project.baseColor }}"/>
+				</svg>
 			</div>
 		</div>
 	</div>
-	<div style="background-color: {{ project.darkShades }}" class="right">
+	<div class="right">
 		<div class="right__top">
 			<div class="navigation">
 				<p style="color: {{ project.lightShades }}">sem</p>
@@ -19,27 +49,6 @@
 				<p style="color: {{ project.lightShades }}">quis</p>
 				<p style="color: {{ project.lightShades }}">nulla</p>
 				<p style="color: {{ project.lightShades }}">non</p>
-			</div>
-		</div>
-		<div class="right__center">
-			<div style="background-color: {{ project.baseColor }}" class="circle"></div>
-			<div style="background-color: {{ project.lightAccent }}" class="square"></div>
-			<div style="border-bottom-color: {{ project.darkAccent }}" class="triangle"></div>
-		</div>
-		<div class="right__bottom">
-			<div class="social">
-				<div class="facebook">
-					<i style="color: {{ project.lightShades }}" class="fa-brands fa-facebook-square fa-3x"></i>
-				</div>
-				<div class="instagram">
-					<i style="color: {{ project.lightShades }}" class="fa-brands fa-instagram fa-3x"></i>
-				</div>
-				<div class="linkedin">
-					<i style="color: {{ project.lightShades }}" class="fa-brands fa-linkedin fa-3x"></i>
-				</div>
-				<div class="twitter">
-					<i style="color: {{ project.lightShades }}" class="fa-brands fa-twitter-square fa-3x"></i>
-				</div>
 			</div>
 		</div>
 	</div>
