--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,127 +1,61 @@
-.circle {
-    height: 500px;
-    width: 500px;
-    border-radius: 50%;
-    position: absolute;
-    top: 20%;
-    right: 21%;
-    z-index: 2;
-}
-
-.square {
-    height: 300px;
-    width: 300px;
-    position: absolute;
-    top: 27%;
-    right: 18%;
-    z-index: 0;
-}
-
-.triangle {
-    width: 0;
-    height: 0;
-    border-left: 120px solid transparent;
-    border-right: 120px solid transparent;
-    border-bottom: 200px solid;
-    z-index: 1;
-    position: absolute;
-    right: 11%;
-    top: 52%;
-}
-
-.graphic {
+.content {
     display: flex;
+    height: 100vh;
 }
 
 .left {
-    height: 100vh;
-    width: 47%;
-    display: flex;
-    flex-direction: column;
+    width: 90%;
 }
 
 .left__top {
     height: 20%;
-    width: 100%;
-    /* background-color: yellow; */
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
 }
 
 .left__bottom {
     height: 80%;
-    width: 100%;
-    /* background-color: red; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.logo {
-    height: 60px;
-    width: 100%;
-    /* background-color: black; */
-    margin-left: 10%;
-    font-size: 3.5rem;
-}
-
-.navigation {
-    width: 20%;
-    height: 90%;
-    /* background-color: cyan; */
-    margin-right: 1%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: large;
 }
 
 .right {
-    height: 100vh;
-    width: 100%;
+    width: 10%;
+}
+
+.logo {
+    font-size: 72px;
+    padding-left: 15%;
+    padding-top: 5%;
+}
+
+.logo svg {
+    position: absolute;
+    height: 12%;
+    width: 12%;
+    left: 11%;
+    top: 3%;
+}
+
+.navigation {
     display: flex;
     flex-direction: column;
-}
-
-.right__top {
-    height: 30%;
-    width: 100%;
-    /* background-color: red; */
-    display: flex;
-    justify-content: flex-end;
+    gap: 10%;
+    font-size: 24px;
     align-items: center;
+    margin-top: 30%;
+    margin-right: 10%;
 }
 
-.right__center {
-    height: 60%;
+.graphic-element svg {
     width: 100%;
-    /* background-color: yellow; */
+    height: 100%;
+    padding-left: 10%;
 }
 
-.right__bottom {
-    height: 10%;
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.social {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    margin-right: 5%;
-    margin-bottom: 1rem;
-}
-
-.text--main {
-    height: 20%;
-    width: 100%;
-    /* background-color: black; */
-    margin-top: 40%;
-    font-size: 1.5rem;
-    display: flex;
-    justify-content: center;
+@media (min-width: 1440px) {
+    .logo svg {
+        left: 7%;
+    }
+    .logo {
+        font-size: 72px;
+        padding-left: 12%;
+        padding-top: 3%;
+    }
 }
